# ksefpy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-06-dx-redesign.md  2026-04-06-integration-tests.md  2026-04-06-ksef-python-sdk.md
docs/superpowers/specs/: 2026-04-06-dx-redesign.md  2026-04-06-integration-tests-design.md  2026-04-06-ksef-python-sdk-design.md
examples/: 01_authenticate_token.py  02_authenticate_certificate.py  03_send_invoice.py  04_download_invoice.py  05_batch_session.py  06_token_management.py  07_permissions.py  08_certificates.py  09_qr_codes.py  10_sync_client.py  11_error_handling.py  12_test_data_setup.py  13_limits_and_status.py  14_invoice_export.py  README.md
ksef/: __init__.py  _client.py  _sync.py  _types.py  easy.py  environments.py  exceptions.py  testing.py  xml.py
ksef/client/: __init__.py  auth.py  base.py  batch.py  certificates.py  invoices.py  limits.py  online.py  peppol.py  permissions.py  session_status.py  sessions.py  testdata.py  tokens.py
ksef/coordinators/: __init__.py  auth.py  batch_session.py  invoice_download.py  online_session.py
ksef/crypto/: __init__.py  certificates.py  qr.py  service.py  xades.py
ksef/models/: __init__.py  auth.py  certificates.py  common.py  errors.py  invoices.py  limits.py  permissions.py  sessions.py  tokens.py
ksef/schemas/: __init__.py
scripts/: generate_schemas.sh  integration_test.py
tests/integration/: conftest.py  test_auth.py  test_batch_session.py  test_certificates.py  test_invoices.py  test_limits.py  test_online_session.py  test_permissions.py  test_sessions.py  test_testdata.py  test_tokens.py
tests/unit/: test_async_ksef.py  test_auth_client.py  test_auth_coordinator.py  test_base_client.py  test_batch_session_manager.py  test_crypto_service.py  test_environments.py  test_exceptions.py  test_invoice_download_manager.py  test_invoices_client.py  test_models.py  test_online_client.py  test_online_session_manager.py  test_qr.py  test_remaining_clients.py  test_session_status_client.py  test_sync_client.py  test_xades.py  test_xml.py
