[project]
name = "ksef"
version = "0.1.0"
description = "Modern Python SDK for the Polish KSeF e-Invoice API 2.0"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "xsdata>=24.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
xades = ["signxml>=4.0"]
qr = ["qrcode>=8.0", "Pillow>=11.0"]
all = ["ksef[xades,qr]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: integration tests against KSeF TEST API"]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
reportCallIssue = "warning"

[tool.mypy]
python_version = "3.12"
strict = true
